Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,29 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: AzurePowerShell@4
+  inputs:
+    azureSubscription: 'Windows Azure MSDN - Visual Studio Ultimate(f800f678-35f3-4453-9d5f-1ce0831dada0)'
+    ScriptType: 'InlineScript'
+    Inline: |
+      Write-Host "Hello World from $Env:AGENT_NAME."
+      Write-Host "My ID is $Env:AGENT_ID."
+      Write-Host "AGENT_WORKFOLDER contents:"
+      gci $Env:AGENT_WORKFOLDER
+      Write-Host "AGENT_BUILDDIRECTORY contents:"
+      gci $Env:AGENT_BUILDDIRECTORY
+      Write-Host "BUILD_SOURCESDIRECTORY contents:"
+      gci $Env:BUILD_SOURCESDIRECTORY
+      Write-Host "Over and out."
+      gci '$(build.artifactStagingDirectory)/*.zip'
+    azurePowerShellVersion: 'LatestVersion'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'webdemoNew'
+    appType: 'webApp'
+    WebAppName: 'webjobdeploytest'
+    packageForLinux: '$(build.artifactStagingDirectory)/*.zip'
+
