--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
-    azureSubscription: 'webdemoNew'
+    azureSubscription: 'WebJobDemoTestServiceConnection'
     appType: 'webApp'
     WebAppName: 'webjobdeploytest'
     packageForLinux: '$(build.artifactStagingDirectory)/*.zip'
