Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
 
 - task: AzurePowerShell@4
   inputs:
-    azureSubscription: 'Windows Azure MSDN - Visual Studio Ultimate(f800f678-35f3-4453-9d5f-1ce0831dada0)'
+    azureSubscription: 'WebJobDemoTestServiceConnection'
     ScriptType: 'InlineScript'
     Inline: |
       Write-Host "Hello World from $Env:AGENT_NAME."
